# BlackJack

./: BlackJack.pptx  CMakeLists.txt  README.md  main.cpp  menuwindow.cpp  menuwindow.h  menuwindow.ui  resources.qrc
src/game/: botplayer.cpp  botplayer.h  card.cpp  card.h  desk.cpp  desk.h  hand.cpp  hand.h  main.cpp  player.h
src/gui/: clickerwindow.cpp  clickerwindow.h  clickerwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  menuwindow.cpp  multiplayermainwindow.cpp  multiplayermainwindow.h  multiplayermainwindow.ui
tests/: BlackJack_tests.cpp
